@@ -1,28 +1,16 @@
 package it.pagopa.interop.probing.eservice.operations.service.impl;
 
-import java.sql.Timestamp;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
-import javax.persistence.TypedQuery;
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.CriteriaQuery;
-import javax.persistence.criteria.Expression;
-import javax.persistence.criteria.Predicate;
-import javax.persistence.criteria.Root;
-import javax.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import it.pagopa.interop.probing.eservice.operations.dtos.EserviceContent;
-import it.pagopa.interop.probing.eservice.operations.dtos.EserviceInteropState;
 import it.pagopa.interop.probing.eservice.operations.dtos.EserviceMonitorState;
 import it.pagopa.interop.probing.eservice.operations.dtos.PollingEserviceResponse;
 import it.pagopa.interop.probing.eservice.operations.dtos.SearchEserviceResponse;
@@ -34,13 +22,12 @@ import it.pagopa.interop.probing.eservice.operations.mapping.dto.UpdateEserviceP
 import it.pagopa.interop.probing.eservice.operations.mapping.dto.UpdateEserviceStateDto;
 import it.pagopa.interop.probing.eservice.operations.mapping.mapper.AbstractMapper;
 import it.pagopa.interop.probing.eservice.operations.model.Eservice;
-import it.pagopa.interop.probing.eservice.operations.model.EserviceContentCriteria;
 import it.pagopa.interop.probing.eservice.operations.model.EserviceProbingRequest;
 import it.pagopa.interop.probing.eservice.operations.model.view.EserviceView;
-import it.pagopa.interop.probing.eservice.operations.model.view.EserviceView_;
 import it.pagopa.interop.probing.eservice.operations.repository.EserviceProbingRequestRepository;
 import it.pagopa.interop.probing.eservice.operations.repository.EserviceRepository;
 import it.pagopa.interop.probing.eservice.operations.repository.EserviceViewRepository;
+import it.pagopa.interop.probing.eservice.operations.repository.query.builder.EserviceContentQueryBuilder;
 import it.pagopa.interop.probing.eservice.operations.repository.query.builder.EserviceViewQueryBuilder;
 import it.pagopa.interop.probing.eservice.operations.repository.specs.EserviceViewSpecs;
 import it.pagopa.interop.probing.eservice.operations.service.EserviceService;
@@ -51,7 +38,6 @@ import it.pagopa.interop.probing.eservice.operations.util.constant.ProjectConsta
 import it.pagopa.interop.probing.eservice.operations.util.logging.Logger;
 
 @Service
-@Transactional
 public class EserviceServiceImpl implements EserviceService {
 
   @Autowired
@@ -71,6 +57,9 @@ public class EserviceServiceImpl implements EserviceService {
 
   @Autowired
   private EserviceViewQueryBuilder eserviceViewQueryBuilder;
+
+  @Autowired
+  private EserviceContentQueryBuilder eserviceContentQueryBuilder;
 
   @Autowired
   private AbstractMapper mapper;
@@ -134,30 +123,31 @@ public class EserviceServiceImpl implements EserviceService {
     logger.logMessageSearchEservice(limit, offset, eserviceName, producerName, versionNumber,
         state);
 
-    Page<EserviceView> eserviceList;
+    Page<EserviceView> eserviceViewPagable;
     List<String> stateBE = Objects.isNull(state) || state.isEmpty() ? List.of()
         : enumUtilities.convertListFromMonitorToPdnd(state);
 
     if (Objects.isNull(state) || state.isEmpty()
         || (state.contains(EserviceMonitorState.N_D) && state.contains(EserviceMonitorState.ONLINE)
             && state.contains(EserviceMonitorState.OFFLINE))) {
-      eserviceList = eserviceViewRepository.findAll(
+      eserviceViewPagable = eserviceViewRepository.findAll(
           EserviceViewSpecs.searchSpecBuilder(eserviceName, producerName, versionNumber),
           new OffsetLimitPageable(offset, limit,
               Sort.by(ProjectConstants.ESERVICE_NAME_FIELD).ascending()));
     } else if (state.contains(EserviceMonitorState.N_D)) {
-      eserviceList = eserviceViewQueryBuilder.findAllWithNDState(limit, offset, eserviceName,
+      eserviceViewPagable = eserviceViewQueryBuilder.findAllWithNDState(limit, offset, eserviceName,
           producerName, versionNumber, stateBE, toleranceMultiplierInMinutes);
     } else {
-      eserviceList = eserviceViewQueryBuilder.findAllWithoutNDState(limit, offset, eserviceName,
-          producerName, versionNumber, stateBE, toleranceMultiplierInMinutes);
+      eserviceViewPagable = eserviceViewQueryBuilder.findAllWithoutNDState(limit, offset,
+          eserviceName, producerName, versionNumber, stateBE, toleranceMultiplierInMinutes);
     }
 
-    List<EserviceContent> list = eserviceList.stream().map(e -> mapper.toSearchEserviceContent(e))
-        .collect(Collectors.toList());
+    List<EserviceContent> eserviceContentList = eserviceViewPagable.getContent().stream()
+        .map(e -> mapper.toSearchEserviceContent(e)).toList();
 
-    return SearchEserviceResponse.builder().content(list).offset(eserviceList.getNumber())
-        .limit(eserviceList.getSize()).totalElements(eserviceList.getTotalElements()).build();
+    return SearchEserviceResponse.builder().content(eserviceContentList)
+        .offset(eserviceViewPagable.getNumber()).limit(eserviceViewPagable.getSize())
+        .totalElements(eserviceViewPagable.getTotalElements()).build();
   }
 
   @Override
@@ -184,44 +174,10 @@ public class EserviceServiceImpl implements EserviceService {
 
     logger.logMessageEserviceReadyForPolling(limit, offset);
 
-    CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-    CriteriaQuery<EserviceContentCriteria> query = cb.createQuery(EserviceContentCriteria.class);
-    Root<EserviceView> root = query.from(EserviceView.class);
+    Page<EserviceContent> pollingActiveEservicePagable =
+        eserviceContentQueryBuilder.findAllEservicesReadyForPolling(limit, offset);
 
-    query.distinct(true).multiselect(root.get(EserviceView_.ESERVICE_RECORD_ID),
-        root.get(EserviceView_.TECHNOLOGY), root.get(EserviceView_.BASE_PATH));
-
-    Expression<Timestamp> makeInterval = cb.function("make_interval", Timestamp.class,
-        root.get(EserviceView_.LAST_REQUEST), root.get(EserviceView_.POLLING_FREQUENCY));
-
-    Expression<Boolean> compareTimestampInterval =
-        cb.function("compare_timestamp_interval", Boolean.TYPE,
-            root.get(EserviceView_.POLLING_START_TIME), root.get(EserviceView_.POLLING_END_TIME));
-
-    Predicate predicate =
-        cb.and(cb.equal(root.get(EserviceView_.STATE), EserviceInteropState.ACTIVE),
-            cb.isTrue(root.get(EserviceView_.PROBING_ENABLED)),
-            cb.or(
-                cb.and(cb.isNull(root.get(EserviceView_.LAST_REQUEST)),
-                    cb.isNull(root.get(EserviceView_.RESPONSE_RECEIVED))),
-                cb.and(cb.lessThanOrEqualTo(makeInterval, cb.currentTimestamp()),
-                    cb.lessThanOrEqualTo(root.get(EserviceView_.LAST_REQUEST),
-                        root.get(EserviceView_.RESPONSE_RECEIVED)))),
-            cb.isTrue(compareTimestampInterval));
-
-    query.where(predicate);
-    TypedQuery<EserviceContentCriteria> q = entityManager.createQuery(query);
-
-    List<EserviceContentCriteria> pollingActiveEserviceContent = q.getResultList();
-
-    Page<EserviceContentCriteria> pollingActiveEservicePagable =
-        new PageImpl<>(pollingActiveEserviceContent,
-            PageRequest.of(offset, limit,
-                Sort.by(ProjectConstants.ESERVICE_RECORD_ID_FIELD).ascending()),
-            pollingActiveEserviceContent.size());
-
-    return PollingEserviceResponse.builder()
-        .content(pollingActiveEservicePagable.stream().map(c -> (EserviceContent) c).toList())
+    return PollingEserviceResponse.builder().content(pollingActiveEservicePagable.getContent())
         .totalElements(pollingActiveEservicePagable.getTotalElements()).build();
   }
 
